# flathunter

./: config.yaml.dist  flathunt.py  pyproject.toml
flathunter/: filter.py  heartbeat.py  hunter.py
flathunter/contacter/: immowelt.py
flathunter/notifiers/: sender_terminal.py
