[tool.poetry]
name = "flathunter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "*"
requests = "*"
urllib3 = "*"
lxml = "*"
coverage = "*"
requests-mock = "*"
Flask = ">=3"
werkzeug = ">=3"
firebase-admin = "6.5.0"
mock-firestore = "*"
pytest-mock = "*"
pytest = "*"
pylint = "*"
requests-random-user-agent = "*"
jsonpath-ng = "*"
backoff = "*"
pytz = "*"
beautifulsoup4 = "*"
webdriver-manager = "*"
apprise = "*"
python-dotenv = "*"
undetected-chromedriver = "*"
prompt-toolkit = "*"
"ruamel.yaml" = "*"
pyright = "1.1.361"
types-beautifulsoup4 = "*"
selenium = "*"
gunicorn = "22.0.0"
#flask-api = {git = "git+https://github.com/flask-api/flask-api.git", develop = true, rev = "develop"}
flask-api = "*"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
